fix: correct css on small screens

--- a/assets/sass/_page_image_list.sass
+++ b/assets/sass/_page_image_list.sass
@@ -7,6 +7,9 @@
   align-self: stretch
   width: calc(100% - 16px)
 
+  @media (max-width: 600px)
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr))
+
   .image
     padding: 8px
     position: relative
