--- a/assets/sass/_pagination.sass
+++ b/assets/sass/_pagination.sass
@@ -10,7 +10,7 @@ ul.pagination
   grid-column-end: -1
   max-width: 480px
   justify-self: center
-  width: 100%
+  width: calc(100% - 16px)
 
   li.page
     appearance: none
